project('bindbc-sdl', 'd')

sources = files(
  'bindbc-sdl/source/bindbc/sdl/config.d',
  'bindbc-sdl/source/bindbc/sdl/bind/package.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlassert.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlatomic.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlaudio.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlblendmode.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlclipboard.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlcpuinfo.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdl.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlerror.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlevents.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlfilesystem.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlgamecontroller.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlgesture.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlhaptic.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlhints.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdljoystick.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlkeyboard.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlkeycode.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlloadso.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdllog.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlmessagebox.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlmouse.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlmutex.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlpixels.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlplatform.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlpower.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlrect.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlrender.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlrwops.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlscancode.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlshape.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlstdinc.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlsurface.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlsystem.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlsyswm.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlthread.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdltimer.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdltouch.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlversion.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlvideo.d',
  'bindbc-sdl/source/bindbc/sdl/bind/sdlvulkan.d',
)
incdir = include_directories('bindbc-sdl/source')

sdl_d = library('sdl-d',
  sources,
  include_directories: incdir,
  d_module_versions: ['BindSDL_Static', 'SDL_No_Atomics'],
)
sdl_d_dep = declare_dependency(include_directories: incdir, link_with: sdl_d)
